Prevent icon jump on app launch

--- a/src/cinnamon/cinnamon.css
+++ b/src/cinnamon/cinnamon.css
@@ -1270,11 +1270,6 @@ StScrollBar StButton#vhandle:hover {
 	transition-duration: 100;
 }
 .window-list-item-box:active,
-.window-list-item-box:checked,
-.window-list-item-box:focus {
-	border-top: 1px solid rgba(192, 192, 192, 0.2);
-}
-.window-list-item-box:active,
 .window-list-item-box:checked {
 	background-gradient-direction: vertical;
 	background-gradient-start: rgba(255, 255, 255, 0.2);
